--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hackernews-react-relay",
-  "homepage": "https://gulshanzealous.github.io/hackernews-react-relay",
+  "homepage": "http://gulshanzealous.github.io/hackernews-react-relay",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
